--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@svgr/webpack": "^8.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.0.1",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "react": "^18",
